# Automation-web-agent-ui

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  debugger.py  pyproject.toml
backend/src/browser_agent/: __init__.py  config.py  logging.py  main.py  ratelimit.py  security.py  telemetry.py
backend/src/browser_agent/api/: __init__.py  routes.py
backend/src/browser_agent/core/: __init__.py  agent.py  browser.py  pool.py  sync_browser.py
backend/src/browser_agent/llm/: __init__.py  base.py  gemini.py  huggingface.py  perplexity.py  retry.py
backend/src/browser_agent/models/: __init__.py  agent.py  codegen.py
backend/src/browser_agent/services/: __init__.py  agent.py  codegen.py  session.py
backend/src/browser_agent/templates/: .gitkeep  playwright_javascript.jinja2  playwright_python.jinja2  playwright_typescript.jinja2
backend/src/browser_agent/tools/: __init__.py  executor.py  schemas.py
backend/tests/: __init__.py  test_api.py  test_codegen.py  test_models.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BrowserPreview.tsx  CodeEditor.tsx  CodeReport.tsx  ConfigPanel.tsx  ConfigurationTab.tsx  LogsPanel.tsx  ReportsTab.tsx  ScreenshotGallery.tsx  TaskDetailsTab.tsx  ThemeToggle.tsx  index.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useAgent.ts
